--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
         <nav class="nav-links">
             <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About</a>
-            <a href="strategies.html" class="nav-link">Strategies</a>
+            <a href="strategies.html" class="nav-link">Content</a>
             <a href="case-studies.html" class="nav-link">Case Studies</a>
             <a href="resources.html" class="nav-link active">Resources</a>
         </nav>
@@ -531,7 +531,7 @@
                     <h4>Navigation</h4>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="strategies.html">Strategies</a>
+                    <a href="strategies.html">Content</a>
                     <a href="case-studies.html">Case Studies</a>
                     <a href="resources.html">Resources</a>
                 </div>
