--- a/case-studies.html
+++ b/case-studies.html
@@ -447,7 +447,7 @@
                     <h4>Navigation</h4>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
-                    <a href="strategies.html">COntent</a>
+                    <a href="strategies.html">Content</a>
                     <a href="case-studies.html">Case Studies</a>
                     <a href="resources.html">Resources</a>
                 </div>
