--- a/about.html
+++ b/about.html
@@ -36,17 +36,18 @@ I am a student passionate about digital media and sustainability. This project c
                         <h4 style="color: var(--accent-text); margin-bottom: 1rem;">Student Information</h4>
                         <p class="body-medium">Name: Sukhpreet Devi
 
-Student ID: 1028646
+Student ID: 1028646<br>
 
-Program: Master of Arts in Digital Media and Global Communications
+Program: Master of Arts in Digital Media and Global Communications<br>
+                            Subject: Foundation of Digital Media<br>
 
-University: University of Niagara Falls
+University: University of Niagara Falls<br>
 
-Email: devisukhrpeet@gmail.com
+Email: devisukhrpeet@gmail.com<br>
 
 About: Enthusiastic digital media student with a focus on ethical, legal, and global communication practices. Interested in multimedia content creation, research, and technology-driven communication strategies.
 
-About Us</p>
+</p>
                     </div>
                    
                 </div>
